[package]
name = "iso15118"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "capi/build.rs"

[features]
default = []
afbmock=[]


[dependencies]
#uncomment the "afbv4" line if you want to use "afbv4" as an external dependencies (for development purpose.)
# You can activate this external dependency with the feature "afbv4" like :"cargo build --features afbv4"
#afbv4 = { git = "https://github.com/redpesk-common/afb-librust", optional = true }
strum_macros = "0.26"
strum = { version = "0.26", features = ["derive"] }

[build-dependencies]
bindgen    = ">=0.6"
system-deps = "2.0"
cc = "1"

[package.metadata.system-deps]
libiso15118= "1.0"

[lib]
name = "iso15118"
crate-type = ["lib"]
path = "src/lib-iso.rs"

[[test]]
name= "test-v2g"
path = "test/lib-test.rs"
iso15118= {path ="../iso-15118"}

