[package]
name = "iso15118"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "capi/build.rs"

[features]
default = []
afbmock=[]


[dependencies]
afbv4 = { git = "https://github.com/redpesk-common/afb-librust", optional = true }
strum_macros = "0.26"
strum = { version = "0.26", features = ["derive"] }
paste = "1.0"
macros = {path = "macros"}

[build-dependencies]
bindgen    = ">=0.6"
system-deps = "7"
cc = "1"

[package.metadata.system-deps]
libiso15118= "1.0"

[lib]
name = "iso15118"
crate-type = ["lib"]
path = "src/@lib-iso.rs"

[[test]]
name= "test-v2g"
path = "test/@lib-test.rs"
iso15118= {path ="../iso-15118"}

